--- a/News Api Project/chandu.html
+++ b/News Api Project/chandu.html
@@ -5,28 +5,42 @@
 <title> Lella Chandu sai </title>
 <link rel="stylesheet" type="text/css" href="css/bootstrap.css">
 <script src="js/bootstrap.js"></script>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
-<center><h1><b>News API</b></h1></center>
-<center><h2><b>The T10 News Teller</b></h2></center>
+<div class="card">
+	<div class="row">
+		<div class="col-md-3">
+			<div style="float:left;padding-top:10px;padding-left:10px">
+				<img src="new image.jpg" width="100px" height="100px">
+			</div>
+		</div>
+		<div class="col-md-9">
+  <div style="padding-right:300px">
+		<center><h1 ><b>News API</b></h1></center>
+		<center><h2><b>The T10 News Teller</b></h2></center>
+		</div>
+	</div>
+	</div>
+
 
 <link rel="stylesheet" href="styles.css">
 </head>
 
-<body onload="top_headlines()">
+<body  onload="top_headlines()" onkeypress=if(event.keyCode==13){search();}>
 		<nav  class="navbar navbar-inverse ">
 		    <div class="navbar-fluid">
 			   <div class="navbar-header">
-               <a href="chandu.html" class="navbar-brand">News API</a>
+               <a href="chandu.html" class="navbar-brand"><i class="fa fa-home"></i> Home</a>
                </div>
 			 <ul class="nav navbar-nav">
-		        <li><button class="but0" value="abc-news">ABC-News</button><li>
-				<li><button class="but0" value="bbc-news" >BBC-News</button></li>
-		        <li><button class="but0" value="bbc-sport">BBC-Sport</button></li>
-		        <li><button class="but0" value="espn">ESPN</button></li>
-		        <li><button class="but0" value="business-insider">Business-Insider</button></li>
-				<li><button class="but0" value="buzzfeed">Buzzfeed</button></li>
-				<li><button class="but0" value="cnbc">CNBC</button></li>
-				<li><button class="but0" value="cnn">CNN</button></li>
+		        <li><button class="but0" value="abc-news"><i class="fa fa-cloud"></i> ABC-News</button><li>
+				<li><button class="but0" value="bbc-news"><i class="fa fa-cloud"></i> BBC-News</button></li>
+		        <li><button class="but0" value="bbc-sport"><i class="fa fa-cloud"></i> BBC-Sport</button></li>
+		        <li><button class="but0" value="espn"><i class="fa fa-cloud"></i> ESPN</button></li>
+		        <li><button class="but0" value="business-insider"><i class="fa fa-cloud"></i> Business-Insider</button></li>
+				<li><button class="but0" value="buzzfeed"><i class="fa fa-cloud"></i> Buzzfeed</button></li>
+				<li><button class="but0" value="cnbc"><i class="fa fa-cloud"></i> CNBC</button></li>
+				<li><button class="but0" value="cnn"><i class="fa fa-cloud"></i> CNN</button></li>
 			</ul>
 			</div>
 	   </nav>
@@ -40,27 +54,27 @@
 
 			<div class="col-md-3">
 				<input type="text" id="searchbox" placeholder="Search here..." required>
-				<button type="submit" onclick="search()">Search</button>
+				<button type="submit" onclick="search()"><i class="fa fa-search"></i></button>
 			</div>
 
 		</div>
 		<div class="container">
 		<div class="row">
-			<div class="col-md-3" >
+			<div class="col-md-3" style="border:2px solid black;margin-right:10px; padding22px;" >
 				<h1><b> Channels</b> </h1>
-				<input type="checkbox" id="news0" value="abc-news">ABC-News<br>
-				<input type="checkbox" id="news1" value="bbc-news" >BBC-News<br>
-				<input type="checkbox" id="news2" value="bbc-sport">BBC-Sport<br>
-				<input type="checkbox" id="news3" value="espn" >ESPN<br>
-				<input type="checkbox" id="news4" value="business-insider"> Business-Insider<br>
-				<input type="checkbox" id="news5" value="buzzfeed" >Buzzfeed<br>
-				<input type="checkbox" id="news6" value="cnbc">CNBC<br>
-				<input type="checkbox" id="news7" value="cnn" >CNN<br><br><br><br><br><br><br><br>
+				<input type="checkbox" id="news0" value="abc-news"><b>ABC-News</b><br>
+				<input type="checkbox" id="news1" value="bbc-news" ><b>BBC-News</b><br>
+				<input type="checkbox" id="news2" value="bbc-sport"><b>BBC-Sport</b><br>
+				<input type="checkbox" id="news3" value="espn" ><b>ESPN</b><br>
+				<input type="checkbox" id="news4" value="business-insider"><b> Business-Insider</b><br>
+				<input type="checkbox" id="news5" value="buzzfeed" ><b>Buzzfeed</b><br>
+				<input type="checkbox" id="news6" value="cnbc"><b>CNBC</b><br>
+				<input type="checkbox" id="news7" value="cnn" ><b>CNN</b><br><br><br>
 			</div>
-			<div class="col-md-9 search "  style="display:block">
+			<div class="col-md-9 search "  style="display:block;height:400px;overflow:scroll">
 				<div class="fonts-in-search-results">
 
-					<h1 id="heading1"> <b>Top Headlines </b></h1>
+					<h1 id="heading1"> <b>Top Headlines... </b></h1>
 					<p id="demo0"> </p>
 					<p id="demo1"> </p>
 					<p id="demo2"> </p>
@@ -93,172 +107,11 @@
 					<p id="result9"> </p>
 			</div>
 		</div>
-
-
 	</div>
 
-<script>
-let title1,url1,total1;
-let arr=[];
-let source=[];
 
-function top_headlines()
-{
-	fetch('https://newsapi.org/v2/top-headlines?sources=google-news&apiKey=2b2b21604b474729869dca8930baf376').
-	then((res)=>{
-		return res.json()
-	})
-// we returned res object into json object
-
-	.then((data)=>{
-		total1 = data.totalResults;
-		console.log(total1);
-
-//by using for loop we can iterate through all the <p> tags
-
-		for(let i=0;i<total1;i++)
-		{
-			 title1=JSON.stringify(data.articles[i].title);
-			 url1=JSON.stringify(data.articles[i].url);
-			 arr.push(title1);
-//here we are passing some html code at particular ids
-			document.getElementById("demo"+i).innerHTML=`<a target="_blank" href=${url1}>
-			<ul>
-			<li id="list1"><span><b>${title1}</b></span></li>
-			</ul>
-			</a>`;
-		}
-	})
-}
-
-
-
-function search()
-{
-	let news=[];
-	let keyword=document.getElementById("searchbox").value;
-
-	for(let i=0;i<8;i++)
-	{
-		if (document.getElementById("news"+i).checked)
-		{
-			answr=document.getElementById("news"+i).value;
-			news.push(answr);
-		}
-	}
-	console.log(news);
-
-	if(news.length!=0 )
-	{
-		if(keyword!='')
-		{
-
-			fetch(`https://newsapi.org/v2/everything?q=${keyword}&sources=${news}&apiKey=2b2b21604b474729869dca8930baf376`)
-			.then((res)=>{
-
-				return res.json()
-			})
-
-			.then((data)=>{
-				let total2=data.totalResults;
-				console.log(total2);
-				if(data.totalResults > 0)
-				{
-					document.getElementById("heading1").innerHTML=`<b>Top Search Results for "${keyword}" are...<b>`;
-					for(let i=0;i<10;i++)
-					{
-						if(total2!=0)
-						{
-							let title2=JSON.stringify(data.articles[i].title);
-							let url2=JSON.stringify(data.articles[i].url);
-							document.getElementById("demo"+i).innerHTML=`<a href=${url2}>
-							<ul>
-							<li id="list2"><b><span>${title2}</b></span></li>
-							</ul>
-							</a>`;
-							total2=total2-1;
-						}
-						else
-						{
-							document.getElementById("demo"+i).innerHTML=" ";
-
-						}
-					}
-					document.getElementById("heading2").innerHTML=`<b>Top Headlines</b>`;
-					for(let j=0;j<total1;j++)
-					{
-
-						document.getElementById("result"+j).innerHTML=`<a target="_blank" href=${url1}>
-						<ul>
-						<li id="list1"><span><b>${arr[j]}</b></span></li>
-						</ul>
-						</a>`;
-					}
-				}
-				else{
-					alert(`No search results found for "${keyword}"`);
-
-
-				}
-			});
-		}
-		else
-		{
-			alert("search for anything");
-		}
-	}
-
-	else if(keyword =='' && news.length==0){
-		alert("Search for anything and mandatory to check one of the news channel");
-	}
-	else{
-		alert("It is mandatory to check one of the channel")
-	}
-
-}
-
-let button_names=document.getElementsByClassName("but0");
-let button_names_length=button_names.length;
-	for(let i=0;i<button_names_length;i++)
-	{
-		console.log(button_names[i]);
-		button_names[i].addEventListener("click",function(){
-		console.log(this.value);
-		onChannelClick(this.value);
-	});
-	}
-
-
-function onChannelClick(channel)
-{
-	fetch(`https://newsapi.org/v2/top-headlines?sources=${channel}&apiKey=2b2b21604b474729869dca8930baf376`).
-	then((res)=>{
-		return res.json()
-	})
-
-	.then((data)=>{
-		let total3 = data.totalResults;
-		console.log(total3);
-
-		let heading=channel.toUpperCase();
-		document.getElementById("heading1").innerHTML=`<b>${heading}<b>`;
-		for(let i=0;i<total3;i++)
-		{
-			 let title3=JSON.stringify(data.articles[i].title);
-			 let url3=JSON.stringify(data.articles[i].url);
-
-
-			document.getElementById("demo"+i).innerHTML=`<a target="_blank" href=${url3}>
-			<ul>
-			<li id="list1"><span><b>${title3}</b></span></li>
-			</ul>
-			</a>`;
-		}
-	})
-
-}
-
+<script src="script.js">
 </script>
-
+</div>
 </body>
 </html>
